# AIThermal-Rust

./: .gitattributes  .gitignore  CHANGELOG.md  DISCLAIMER.md  LICENSE  README.md  build.ps1  build.sh  customize.sh  lovable.toml  module.prop  sepolicy.rule  service.sh  uninstall.sh
Logs/thermalai_state/: calibration.json  charging_session.json  hardware_profile.json  hardware_report.txt  snapshot.json  thermalai_state.json
config/: game_list.conf  profiles.conf
rust/: Cargo.toml  README.md
rust/.cargo/: config.toml
rust/src/: calibration.rs  config.rs  cpuset.rs  daemon.rs  gaming.rs  governors.rs  lib.rs  logger.rs  main.rs  orchestrator.rs  runtime_context.rs  sensors.rs  snapshot.rs  sysfs.rs  thermal.rs  watcher.rs
rust/src/cache/: mod.rs
rust/src/charging/: mod.rs
rust/src/hardware/: android_prop.rs  capability.rs  charging.rs  cpu.rs  cpuset.rs  discovery.rs  display.rs  gpu.rs  kernel.rs  memory.rs  mod.rs  network.rs  peridot.rs  probe.rs  profile.rs  report.rs  scheduler.rs  screen_netlink.rs  services.rs  storage.rs  thermal.rs
rust/src/monitor/: frame_sampler.rs  load_sampler.rs  mod.rs
rust/src/policy/: mod.rs
rust/src/prediction/: mod.rs
rust/src/profiles/: mod.rs
rust/src/recovery/: mod.rs
rust/src/scheduler/: adaptive_governor.rs  mod.rs
rust/src/telemetry/: battery_stats.rs  mod.rs  trace_marker.rs  writer.rs
rust/src/tuning/: backend.rs  mod.rs
rust/src/watchdog/: mod.rs
src/routes/: index.tsx
webroot/: app.js  index.html  style.css
