[package]
name = "thermalai-daemon"
version = "3.1.5"
edition = "2024"

[dependencies]
glob = "0.3"
flate2 = "1.0"
walkdir = "2.4"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "local-time"] }
regex = "1.10"
nix = { version = "0.29", features = ["signal"] }
parking_lot = "0.12"
tracing-appender = "0.2"
ctrlc = "3.5.2"
lazy_static = "1.5.0"
chrono = { version = "0.4.45", features = ["clock"] }
notify = "8.2.0"
netlink-sys = "0.8.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "unwind"
strip = true

[dev-dependencies]
tempfile = "3.27.0"


[[bin]]
name = "thermalai-detect"
path = "src/bin/thermalai-detect.rs"


[lib]
name = "thermalai_daemon"
path = "src/lib.rs"

[[bin]]
name = "thermalair"
path = "src/bin/thermalair.rs"
